<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/HomeFragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/PushNotificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_push_notifications"
        />

    <item
        android:id="@+id/ShowNotificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_show_notifications"
        />

    <item
        android:id="@+id/CalendarFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calendar"
        />
</menu>