<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.ipcalink.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/PushNotificationFragment"
        android:name="com.example.ipcalink.notifications.PushNotificationFragment"
        android:label="@string/push_notification_fragment_label"
        tools:layout="@layout/fragment_push_notification">
    </fragment>

    <fragment
        android:id="@+id/ShowNotificationFragment"
        android:name="com.example.ipcalink.notifications.ShowNotificationsFragment"
        android:label="@string/show_notification_fragment_label"
        tools:layout="@layout/fragment_show_notificacoes">
    </fragment>

    <fragment
        android:id="@+id/CalendarFragment"
        android:name="com.example.ipcalink.calendar.CalendarFragment"
        android:label="@string/calendar_fragment_label"
        tools:layout="@layout/fragment_calendar">
    </fragment>

</navigation>